<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"
    android:background="@color/white"
    tools:context=".ui.expenses.EditExpensesNotesActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_back_arrow"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_8sdp"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/round_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit_notes"
                android:textColor="@color/greenP_3"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/_8sdp"
                android:backgroundTint="@android:color/transparent"
                app:srcCompat="@drawable/round_delete_forever_24" />

        </RelativeLayout>
    </TableRow>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_48sdp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses"
            style="@style/CustomChipStyle"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pemasukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            style="@style/CustomChipStyle"/>
    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_96sdp"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/date_add"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

        </TableRow>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ems="10"
            android:hint="@string/notes_add"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/money"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ems="10"
            android:hint="@string/money_add"
            android:inputType="number"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_24sdp"
        android:background="@drawable/rectangle"
        android:backgroundTint="@color/greenP_4"
        android:text="@string/save"
        android:textColor="@color/greenP_5"
        android:textSize="@dimen/_12sdp"/>

</RelativeLayout>