<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@color/white"
    tools:context=".ui.SettingActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp">

        <ImageButton
            android:id="@+id/btn_back_arrow"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/round_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/security"
        android:textColor="@color/green"
        android:textSize="@dimen/_10sdp"/>

    <TableRow
        android:id="@+id/set_password"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp">

        <ImageButton
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/round_lock_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/set_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/password_switch"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_8sdp"/>
    </TableRow>

    <TableRow
        android:id="@+id/change_password"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp">

        <ImageButton
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/round_sync_alt_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/change_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"/>
    </TableRow>

</LinearLayout>