<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/limeade_bg2"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.password.DisablePasswordActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp">

        <ImageButton
            android:id="@+id/btn_back_arrow"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/round_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/disable_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />
    </TableRow>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_line"
        android:drawableStart="@drawable/round_person_outline_24"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:ems="10"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"
        android:inputType="text"
        android:hint="@string/username"
        android:textColorHint="@color/date"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_line"
        android:hint="@string/password"
        android:textColorHint="@color/date"
        app:passwordToggleDrawable="@drawable/visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/_128sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_24sdp"
        android:padding="@dimen/_8sdp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>
