<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_8sdp"
    tools:context=".ui.login.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_250sdp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/sign_up" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_line"
        android:drawableStart="@drawable/round_person_24"
        android:drawablePadding="@dimen/_8sdp"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/date"
        android:inputType="text"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_line"
        android:hint="@string/password"
        android:textColorHint="@color/date"
        app:passwordToggleDrawable="@drawable/visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/rectangle_line"
        android:hint="@string/confirm"
        android:textColorHint="@color/date"
        app:passwordToggleDrawable="@drawable/visibility"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/grey">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_user"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/confirm_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:clickable="true"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/question"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/grey"
        android:textAlignment="center"/>

</LinearLayout>
